--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 
+    <!--Scripts-->
+    <script type="text/javascript" src="/assets/js/main.js"></script>
+    <script type="text/javascript" src="/assets/js/date.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script type="text/javascript" src="/assets/js/mail.js"></script>
+
 </head>
 
 <body>
@@ -570,8 +576,7 @@
                 </div>
                 <!-- Email sending-->
 
-                <script src="https://smtpjs.com/v3/smtp.js"></script>
-                <script src="/assets/js/mail.js"></script>
+
                 <!-- <script type="text/javascript">
                     function sendEmail() {
 
@@ -636,8 +641,7 @@
 
     <!-- Template Main JS File -->
 
-    <script src="/assets/js/main.js "></script>
-    <script src="/assets/js/date.js "></script>
+
 
 </body>
 
