--- a/linktree/dnd/linktree.html
+++ b/linktree/dnd/linktree.html
@@ -8,6 +8,7 @@
     <title>Links website</title>
 
     <link rel="stylesheet" href="/linktree/dnd/assets/style.css">
+    <link rel="stylesheet" href="/linktree/dnd/assets/style2.css">
     <link rel="stylesheet" href="/linktree/dnd/assets/style3.css">
 
 </head>
@@ -15,13 +16,13 @@
 
 <body class="w3-white">
     <!--Scripts-->
-    <script src="/assets/js/popup.js "></script>
+    <script type="text/javascript" src="/assets/js/popup.js"></script>
     <!-- Content container -->
     <div class=" container ">
 
         <!-- Image and name container. -->
         <div class="image-container ">
-            <a href="https://chat.whatsapp.com/HMwIy6OS93G1RF6BXodChZ "><img src="/linktree/dnd/assets/img/DnD-WhatsappLogo.png " class="w3-margin " alt="Didi Tarjetas Digitales " max-width="100% " height="150px " style="border-radius: 50%;"></a>
+            <a href="https://chat.whatsapp.com/HMwIy6OS93G1RF6BXodChZ "><img src="/linktree/dnd/assets/img/DnD-WhatsappLogo.png " class="w3-margin " alt="Whatsapp DnD " max-width="100% " height="150px " style="border-radius: 50%;"></a>
 
             <div class=" w3-text-white ">
                 <p class="w3-text-white w3-large "><span class="w3-tag w3-large w3-round w3-grey w3-text-white "><strong>Vinculos de Pago</strong></span></p>
