--- a/404.html
+++ b/404.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <title>404 Pagina no encontrada</title>
     <link type='text/css' rel='stylesheet' href='https://cdn.3up.dk/flexgrid.io@2.5.1/css/flexgrid.min.css'>
-    <link type='text/css' rel="stylesheet" href="assets/style.css">
+    <link type='text/css' rel="stylesheet" href="/assets/style.css">
 
+    <!-- partial -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+    <script src='https://cdn.3up.dk/in-view@0.6.1'></script>
+    <script src="/assets/script.js"></script>
 </head>
 
 <body>
@@ -23,10 +27,7 @@
             </div>
         </div>
     </div>
-    <!-- partial -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-    <script src='https://cdn.3up.dk/in-view@0.6.1'></script>
-    <script src="assets/script.js"></script>
+
 
 </body>
 
